tests/ui/unconditional-recursion.stderr
error: expected expression, found `@`
 --> tests/ui/unconditional-recursion.rs:8:5
  |
8 |     @//fail
  |     ^ expected expression

warning: function cannot return without recursing
 --> tests/ui/unconditional-recursion.rs:4:9
  |
4 | #[error("{self}")]
  |         ^^^^^^^^
  |         |
  |         cannot return without recursing
  |         recursive call site
  |
  = help: a `loop` may express intention better if this is on purpose
note: the lint level is defined here
 --> tests/ui/unconditional-recursion.rs:4:9
  |
4 | #[error("{self}")]
  |         ^^^^^^^^
